--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -47,10 +47,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .HeroSection figure {
     position: relative;
+
 }
 
 .HeroSection figure::after {
@@ -63,6 +65,7 @@
     top: -5rem;
     z-index: -1;
     background-size: contain;
+    filter: brightness(90%)
 }
 
 .image {
@@ -77,6 +80,11 @@
 .HeroSection .img-style {
     width: 700px;
     height: auto;
+    filter: brightness(70%)
+}
+
+.HeroSection .img-style:hover {
+    filter: brightness(100%)
 }
 
 @media (max-width: 768px) {
